TDP-978: fix some  styling problem (a 1px white line at the bottom of the home page  + White border on firefox on a medium screen)

--- a/dataprep-webapp/src/components/home/_subheader.scss
+++ b/dataprep-webapp/src/components/home/_subheader.scss
@@ -6,6 +6,7 @@ $subheader-background: $light-gray;
   background-color: $subheader-background;
   border-bottom: 1px solid $light-gray;
   box-shadow: $box-shadow;
+  height: 58px;
 
   .subheader-wrapper {
     @include outer-container;
